# isaac-perf-gen

./: .buildinfo  .gitignore  .gitmodules  README.md  api.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  requirements.txt  requirements_dev.txt  requirements_verify.txt  search.html  searchindex.js
.github/workflows/: docs.yml  release.yml  style.yml  test.yml
_autosummary/: isaac_fake_hls.cli.html  isaac_fake_hls.fake_hls.html  isaac_fake_hls.html  isaac_load_cdsl.cdsl_loader.html  isaac_load_cdsl.cli.html  isaac_load_cdsl.html  isaac_perf_gen.cli.html  isaac_perf_gen.gen_xisaac_core_perf_dsl.html  isaac_perf_gen.gen_xisaac_core_perf_dsl_new.html  isaac_perf_gen.html  isaac_perf_verify.cli.html  isaac_perf_verify.html  isaac_perf_verify.verify.html
_sources/: index.rst.txt
_sources/_autosummary/: isaac_fake_hls.cli.rst.txt  isaac_fake_hls.fake_hls.rst.txt  isaac_fake_hls.rst.txt  isaac_load_cdsl.cdsl_loader.rst.txt  isaac_load_cdsl.cli.rst.txt  isaac_load_cdsl.rst.txt  isaac_perf_gen.cli.rst.txt  isaac_perf_gen.gen_xisaac_core_perf_dsl.rst.txt  isaac_perf_gen.gen_xisaac_core_perf_dsl_new.rst.txt  isaac_perf_gen.rst.txt  isaac_perf_verify.cli.rst.txt  isaac_perf_verify.rst.txt  isaac_perf_verify.verify.rst.txt
docs/: Makefile  api.rst  conf.py  requirements.txt
docs/_autosummary/: isaac_perf_gen.cli.rst  isaac_perf_gen.gen_xisaac_core_perf_dsl.rst
examples/: .gitignore
examples/1-crc32/cv32e40p/: generate.sh
examples/1-crc32/cv32e40p/inputs/: final_index.yml
examples/1-crc32/cv32e40p/outputs/: CV32E40PXISAAC.corePerfDsl  InstructionTrace_XISAAC.json  uarchs.csv
examples/1-crc32/cva6/: generate.sh
examples/1-crc32/cva6/outputs/: CVA6XISAAC.corePerfDsl  InstructionTrace_XISAAC.json  uarchs.csv
examples/2-crc32-inout/cva5/: generate.sh
examples/3-wca/cv32e40p/: generate.sh
src/: __init__.py  version.py
src/isaac_fake_hls/: __init__.py  cli.py  fake_hls.py
src/isaac_load_cdsl/: __init__.py  cdsl_loader.py  cli.py
src/isaac_perf_gen/: __init__.py  cli.py  gen_xisaac_core_perf_dsl.py  gen_xisaac_core_perf_dsl_new.py
src/isaac_perf_verify/: __init__.py  cli.py  verify.py
templates/cv32e40p/: CV32E40PXISAAC.corePerfDsl.mako
templates/cv32e40p/parts/: cv32e40p_xisaac_ex_stages.mako.old  cv32e40p_xisaac_instr_groups.mako  cv32e40p_xisaac_microaction_mapping.mako.old  cv32e40p_xisaac_microaction_mapping_new.mako  cv32e40p_xisaac_resources.mako  cv32e40p_xisaac_resources.mako.old  cv32e40p_xisaac_resources_new.mako  cv32e40p_xisaac_virtual_microactions.mako  cv32e40p_xisaac_virtual_microactions_new.mako
tests/: test_dummy.py
(+56 files in other folders)
