[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=7.0"]
build-backend = "packaging_backend"
backend-path = ["."]

[project]
name = "isaac-perf-gen"
description = "Generating CorePerfDSL Performance Models for ISE candidates"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
dynamic = ["version"]
license = { file = "LICENSE" }
dependencies = [
    "mako",
    "numpy",
    "pandas"
]

[project.optional-dependencies]
tests = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/tum-ei-eda/isaac-perf-gen"
Repository = "https://github.com/tum-ei-eda/isaac-perf-gen"
Issues = "https://github.com/tum-ei-eda/isaac-perf-gen/issues"

[project.scripts]
emx-onnx-cgen = "isaac-perf-gen.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE"]

[tool.setuptools.package-data]
emx_onnx_cgen = ["templates/*.mako"]

[tool.setuptools.packages.find]
where = ["src"]
