[build-system]
requires = [
    "setuptools>=64",
    "setuptools-scm>=8",
    "wheel"
]
build-backend = "setuptools.build_meta"
# backend-path = ["."]

[project]
name = "isaac-perf-gen"
description = "Generating CorePerfDSL Performance Models for ISE candidates"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
dynamic = ["version", "dependencies", "optional-dependencies"]
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/tum-ei-eda/isaac-perf-gen"
Repository = "https://github.com/tum-ei-eda/isaac-perf-gen"
Issues = "https://github.com/tum-ei-eda/isaac-perf-gen/issues"

[project.scripts]
isaac-perf-gen = "isaac_perf_gen.cli:main"
isaac-fake-hls = "isaac_fake_hls.cli:main"
isaac-load-cdsl = "isaac_load_cdsl.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE"]

[tool.setuptools.package-data]
emx_onnx_cgen = ["templates/*.mako"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements_dev.txt"] }

[tool.setuptools_scm]

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"isaac_toolkit/version.py" = ["{version}"]
"docs/conf.py" = ["{version}"]
